Update BI App and Engine 1.7.0

--- a/volkovlabs-bi-app/i18n/translations/en.json
+++ b/volkovlabs-bi-app/i18n/translations/en.json
@@ -101,6 +101,7 @@
         "alertUpdatedMessage": "Alert Rule '{{name}}' has been updated.",
         "alertUpdatedTitle": "Success",
         "collapseAllButton": "Collapse All",
+        "copyButton": "Duplicate",
         "deleteButton": "Delete",
         "deleteConfirmModal": {
           "body": "Please confirm to delete Alert Rule '{{name}}'.",
